# Funga-Deal

./: .gitignore  README.md  test_base64.js  test_base64.py
.claude/: settings.json
backend/: .env.example  .gitignore  config.py  main.py  requirements.txt  test_api.py  test_db.py  test_import.py  test_msg.py  test_tx.py
backend/alembic/: env.py
backend/middleware/: idempotency.py
backend/models/: __init__.py  audit.py  dispute.py  ledger.py  message.py  payment_link.py  transaction.py  user.py
backend/routers/: admin.py  auth.py  disputes.py  (+7 more)
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
vault/: .env.example  .gitignore  Cargo.toml
vault/migrations/: 20240101000000_create_escrows.sql  20240102000000_add_nowpayments_invoice_id.sql  20240103000000_create_payment_link_orders.sql  20240104000000_add_universal_pay.sql  20240105000000_create_webhook_audit_log.sql  20240106000000_add_payout_states_and_jobs.sql  20240107000000_create_transaction_audit_trail.sql  20240108000000_add_mod_support.sql  20240109000000_create_transaction_messages.sql
vault/src/: config.rs  crypto_payment.rs  error.rs  main.rs  mod_service.rs  mpesa.rs  nowpayments.rs  payment.rs  payment_link_payment.rs  payout_service.rs  universal_pay.rs  webhook.rs  worker.rs
vault/src/api/: error.rs
vault/src/api/middleware/: validate.rs
vault/src/application/escrow/: create.rs  mod.rs  ship.rs
vault/src/domain/escrow/: error.rs  repository.rs
vault/src/escrow/: db.rs  machine.rs  mod.rs  states.rs
vault/src/infrastructure/db/: escrow_repo.rs  mod.rs
(+49 files in other folders)
