[package]
name        = "funga-vault"
version     = "0.1.0"
edition     = "2021"
description = "Hardened type-state escrow orchestrator for Funga-Deal"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum            = "0.7"
tower            = "0.4"
tower-http       = { version = "0.5", features = ["trace", "cors"] }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"

secrecy = { version = "0.8", features = ["serde"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "rust_decimal",
    "macros",
] }

uuid         = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
time         = { version = "0.3", features = ["serde"] }

thiserror = "1"
anyhow    = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"
validator   = { version = "0.18", features = ["derive"] }

dotenvy = "0.15"
reqwest  = { version = "0.12", features = ["json"] }
base64   = "0.22"
hmac     = "0.12"
sha2     = "0.10"
hex      = "0.4"

[dev-dependencies]
tokio              = { version = "1", features = ["full", "test-util"] }
rust_decimal_macros = "1"
